[gd_scene load_steps=14 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://hurttriggerhitbox/Triggerbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://hurttriggerhitbox/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://autoload/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://enemy/scripts/EnemyMelee.gd" type="Script" id=5]
[ext_resource path="res://enemy/scripts/ChasePlayerZone.gd" type="Script" id=6]
[ext_resource path="res://enemy/scripts/WanderTimer.gd" type="Script" id=7]
[ext_resource path="res://hurttriggerhitbox/Hitbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://enemy/scripts/EnemyMeleeHitbox.gd" type="Script" id=9]

[sub_resource type="CircleShape2D" id=80]
radius = 8.0

[sub_resource type="CircleShape2D" id=81]
radius = 128.0

[sub_resource type="CapsuleShape2D" id=83]
radius = 16.0

[sub_resource type="CapsuleShape2D" id=82]
radius = 16.0
height = 24.0

[node name="EnemyMelee" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 0
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 4.76837e-07 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 80 )

[node name="ChaseTriggerBox" parent="." instance=ExtResource( 2 )]
collision_layer = 0
collision_mask = 4
script = ExtResource( 6 )

[node name="CollisionShape2D" parent="ChaseTriggerBox" index="0"]
shape = SubResource( 81 )

[node name="EnemyHitbox" parent="." instance=ExtResource( 8 )]
collision_layer = 128
collision_mask = 0
script = ExtResource( 9 )

[node name="CollisionShape2D" parent="EnemyHitbox" index="0"]
shape = SubResource( 83 )

[node name="EnemyHurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 64
collision_mask = 16

[node name="CollisionShape2D" parent="EnemyHurtbox" index="0"]
shape = SubResource( 82 )

[node name="EnemyBulletSpawn" type="Position2D" parent="."]
position = Vector2( 32, 0 )

[node name="EnemyStats" parent="." instance=ExtResource( 4 )]
acceleration = 300
max_speed = 50
roll_speed = 200
friction = 200
bullet_speed = 1000

[node name="WanderTimer" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Timer" type="Timer" parent="WanderTimer"]
one_shot = true
autostart = true

[connection signal="body_entered" from="ChaseTriggerBox" to="ChaseTriggerBox" method="_on_ChaseTriggerBox_body_entered"]
[connection signal="body_exited" from="ChaseTriggerBox" to="ChaseTriggerBox" method="_on_ChaseTriggerBox_body_exited"]
[connection signal="area_entered" from="EnemyHurtbox" to="." method="_on_EnemyHurtbox_area_entered"]
[connection signal="no_health" from="EnemyStats" to="." method="_on_EnemyStats_no_health"]
[connection signal="timeout" from="WanderTimer/Timer" to="WanderTimer" method="_on_Timer_timeout"]

[editable path="ChaseTriggerBox"]
[editable path="EnemyHitbox"]
[editable path="EnemyHurtbox"]
